--- a/public/index.html
+++ b/public/index.html
@@ -173,7 +173,7 @@
 
     <!-- QR Code à direita com margem ajustada -->
     <div style="flex: 1; max-width: 250px; margin-right: 20px;">
-      <img src="qr.png" alt="QR Code Pix" style="width: 100%; border-radius: 10px; border: 2px dashed #d8a1b2;">
+      <img src="/public/qr.png" alt="QR Code Pix" style="width: 100%; border-radius: 10px; border: 2px dashed #d8a1b2;">
     </div>
   </div>
 
