--- a/public/index.html
+++ b/public/index.html
@@ -240,7 +240,7 @@
         return;
       }
 
-      fetch("http://localhost:3000/presentes", {
+      fetch("https://casamento-0byc.onrender.com/presentes", {
         method: "POST",
         headers: {
           "Content-Type": "application/json"
