--- a/public/index.html
+++ b/public/index.html
@@ -227,40 +227,41 @@
     }
 
     function enviarFormulario() {
-      const nome = document.getElementById("nome").value.trim();
-      const dataAtual = new Date().toISOString().split("T")[0];
+  const nome = document.getElementById("nome").value.trim();
+  const dataAtual = new Date().toISOString().split("T")[0];
 
-      if (!nome) {
-        alert("Por favor, preencha seu nome antes de enviar.");
-        return;
-      }
+  if (!nome) {
+    alert("Por favor, preencha seu nome antes de enviar.");
+    return;
+  }
 
-      if (!presenteSelecionado) {
-        alert("Por favor, escolha um presente antes de enviar.");
-        return;
-      }
+  if (!presenteSelecionado) {
+    alert("Por favor, escolha um presente antes de enviar.");
+    return;
+  }
 
-      fetch("https://casamento-0byc.onrender.com/presentes", {
-        method: "POST",
-        headers: {
-          "Content-Type": "application/json"
-        },
-        body: JSON.stringify({
-          nome: nome,
-          data_presente: dataAtual,
-          presente_escolhido: presenteSelecionado
-        })
-      })
-      .then(response => response.text())
-      .then(data => {
-        alert(`Obrigado, ${nome}! Sua escolha foi registrada com sucesso.`);
-        console.log("Resposta do servidor:", data);
-      })
-      .catch(error => {
-        console.error("Erro ao enviar:", error);
-        alert("Ocorreu um erro ao registrar sua escolha.");
-      });
-    }
+  fetch("https://casamento-0byc.onrender.com/presentes", {
+    method: "POST",
+    headers: {
+      "Content-Type": "application/json"
+    },
+    body: JSON.stringify({
+      nome: nome,
+      data_presente: dataAtual,
+      presente_escolhido: presenteSelecionado
+    })
+  })
+  .then(response => response.text())
+  .then(data => {
+    console.log("Resposta do servidor:", data);
+    // Redireciona para a página de agradecimento
+    window.location.href = "/obrigado.html";
+  })
+  .catch(error => {
+    console.error("Erro ao enviar:", error);
+    alert("Ocorreu um erro ao registrar sua escolha.");
+  });
+}
   </script>
 </body>
 </html>
