--- a/public/index.html
+++ b/public/index.html
@@ -28,8 +28,8 @@
   </style>
 </head>
 <body>
-  <div class="imagem-container">
-    <img src="/public/pg.png" alt="Imagem vertical style="width: 100%; height: auto;>
-  </div>
+<div class="imagem-container">
+  <img src="https://i.imgur.com/abNN8ag.jpeg" alt="Imagem vertical" style="width: 100%; height: auto;">
+</div>
 </body>
 </html>
