--- a/public/index.html
+++ b/public/index.html
@@ -1,32 +1,35 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>Imagem em Tela Cheia</title>
+  <title>Imagem Vertical</title>
   <style>
-    html, body {
+    body {
       margin: 0;
       padding: 0;
-      height: 100%;
-      overflow: hidden;
+      background-color: #fdfdfd;
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      height: 100vh;
+      overflow-y: auto;
     }
 
     .imagem-container {
-      width: 100vw;
-      height: 100vh;
+      max-width: 100%;
+      padding: 20px;
     }
 
-    .imagem-container img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover; /* ou 'contain' se quiser ver tudo */
+    img {
       display: block;
+      max-width: 100%;
+      height: auto;
     }
   </style>
 </head>
 <body>
-  <div class="imagem-container">
-    <img src="https://i.imgur.com/SEU-CODIGO.png" alt="Imagem em tela cheia">
-  </div>
+<div class="imagem-container">
+  <img src="https://i.imgur.com/abNN8ag.jpeg" alt="Imagem vertical" style="width: 100%; height: auto;">
+</div>
 </body>
 </html>
