--- a/public/index.html
+++ b/public/index.html
@@ -2,31 +2,30 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Imagem em Tela Cheia</title>
+  <title>Imagem com Scroller</title>
   <style>
     html, body {
       margin: 0;
       padding: 0;
       height: 100%;
-      overflow: hidden;
+      overflow-y: auto; /* permite rolagem vertical */
     }
 
     .imagem-container {
       width: 100vw;
-      height: 100vh;
+      height: auto; /* altura automática para permitir rolagem */
     }
 
     .imagem-container img {
       width: 100%;
-      height: 100%;
-      object-fit: cover; /* ou 'contain' se quiser ver tudo */
+      height: auto; /* mantém proporção da imagem */
       display: block;
     }
   </style>
 </head>
 <body>
   <div class="imagem-container">
-    <img src="https://i.imgur.com/abNN8ag.jpeg" alt="Imagem em tela cheia">
+    <img src="https://i.imgur.com/abNN8ag.jpeg" alt="Imagem com scroller">
   </div>
 </body>
 </html>
