--- a/public/index.html
+++ b/public/index.html
@@ -2,30 +2,52 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Imagem com Scroller</title>
+  <title>Imagem com Botões Fantasma Separados</title>
   <style>
     html, body {
       margin: 0;
       padding: 0;
       height: 100%;
-      overflow-y: auto; /* permite rolagem vertical */
+      overflow-y: auto;
     }
 
     .imagem-container {
+      position: relative;
       width: 100vw;
-      height: auto; /* altura automática para permitir rolagem */
+      height: auto;
     }
 
     .imagem-container img {
       width: 100%;
-      height: auto; /* mantém proporção da imagem */
+      height: auto;
       display: block;
     }
+
+    .botao-fantasma {
+      position: absolute;
+      width: 100px;
+      height: 100px;
+      top: 4327px;           /* posição do botão Agendar */
+      right: 155px;
+      cursor: pointer;
+    }
+
+    .botao-localizacao {
+      position: absolute;
+      width: 100px;
+      height: 100px;
+      top: 4327px;           /* posição diferente do botão Localização */
+      right: 730px;
+      cursor: pointer;
+    }
+
   </style>
 </head>
 <body>
   <div class="imagem-container">
-    <img src="https://i.imgur.com/abNN8ag.jpeg" alt="Imagem com scroller">
+    <img src="/public/pg.png" alt="Imagem com botões">
+    <a href="agendamento.html" class="botao-fantasma"></a>
+    <a href="https://maps.app.goo.gl/WH5Mmdni9L7raMbw8" class="botao-localizacao"></a>
   </div>
 </body>
 </html>
