--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
 </head>
 <body>
   <div class="imagem-container">
-    <img src="/public/pg.png" alt="Imagem com botões">
+    <img src="https://i.imgur.com/abNN8ag.jpeg" alt="Imagem com botões">
     <a href="agendamento.html" class="botao-fantasma"></a>
     <a href="https://maps.app.goo.gl/WH5Mmdni9L7raMbw8" class="botao-localizacao"></a>
   </div>
