--- a/public/agendamento.html
+++ b/public/agendamento.html
@@ -64,7 +64,7 @@
     }
 
     .botao-presente:hover {
-      background-color: #a65c6a;
+      background-color: #94293c;
     }
 
     .botao-presente:disabled {
