--- a/public/agendamento.html
+++ b/public/agendamento.html
@@ -6,7 +6,7 @@
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
-      background-color: #fff5f7;
+      background-color: #eef3d1;
       margin: 0;
       padding: 0;
     }
@@ -21,7 +21,7 @@
     }
 
     h1 {
-      color: #b76e79;
+      color: #b6c558;
       text-align: center;
       margin-bottom: 30px;
       font-size: 32px;
@@ -54,7 +54,7 @@
     .botao-presente {
       width: 100%;
       padding: 25px;
-      background-color: #b76e79;
+      background-color: #b6c558;
       color: white;
       border: none;
       border-radius: 10px;
@@ -64,7 +64,7 @@
     }
 
     .botao-presente:hover {
-      background-color: #94293c;
+      background-color: #383d1b;
     }
 
     .botao-presente:disabled {
@@ -82,8 +82,8 @@
     .qr-code {
       width: 100%;
       height: 250px;
-      background-color: #f8e9ed;
-      border: 2px dashed #d8a1b2;
+      background-color: #b6c558;
+      border: 2px dashed #cfd6a1;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -115,7 +115,7 @@
     }
 
     button:hover {
-      background-color: #a65c6a;
+      background-color: #b6c558;
     }
 
     @media (max-width: 600px) {
@@ -154,7 +154,7 @@
 </head>
 <body>
   <div class="formulario">
-    <h1>Lista de Presentes 💝</h1>
+    <h1>Lista de Presentes</h1>
 
     <label for="nome">Seu nome:</label>
     <input type="text" id="nome" name="nome" placeholder="Digite seu nome">
