--- a/public/painel.html
+++ b/public/painel.html
@@ -59,29 +59,24 @@
   </table>
 
   <script>
-  function carregarDados() {
-    fetch("https://casamento-0byc.onrender.com/presentes")
-      .then(res => res.json())
-      .then(dados => {
-        const tabela = document.getElementById("tabela-dados");
-        tabela.innerHTML = ""; // Limpa a tabela antes de atualizar
+fetch("https://casamento-0byc.onrender.com/presentes")
+  .then(res => res.json())
+  .then(dados => {
+    console.log("Dados recebidos:", dados); // 👈 Adicione isso
 
-        dados.forEach(item => {
-          const linha = document.createElement("tr");
-          linha.innerHTML = `
-            <td>${item.nome}</td>
-            <td>${item.data_presente}</td>
-            <td>${item.presente_escolhido}</td>
-          `;
-          tabela.appendChild(linha);
-        });
-      })
-      .catch(err => {
-        console.error("Erro ao carregar dados:", err);
-        const tabela = document.getElementById("tabela-dados");
-        tabela.innerHTML = `<tr><td colspan="3">Erro ao carregar dados do servidor.</td></tr>`;
-      });
-  }
+    const tabela = document.getElementById("tabela-dados");
+    tabela.innerHTML = "";
+
+    dados.forEach(item => {
+      const linha = document.createElement("tr");
+      linha.innerHTML = `
+        <td>${item.nome}</td>
+        <td>${item.data_presente}</td>
+        <td>${item.presente_escolhido}</td>
+      `;
+      tabela.appendChild(linha);
+    });
+  })
 
   // Carrega os dados inicialmente
   carregarDados();
