--- a/public/painel.html
+++ b/public/painel.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+  <link rel="icon" href="https://i.imgur.com/Y1SCc8D.png" type="image/png">
   <meta charset="UTF-8">
   <title>Painel de Presentes</title>
   <style>
