--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+  <link rel="icon" href="https://i.imgur.com/Y1SCc8D.png" type="image/png">
+  <meta property="og:title" content="Convite de Casamento — Jhucy & Gabriel">
+  <meta property="og:description" content="Venha celebrar esse momento especial conosco.">
+  <meta property="og:image" content="https://i.imgur.com/wWL3UmJ.png">
+  <meta property="og:url" content="https://casamento-0byc.onrender.com">
+  <meta property="og:type" content="website">
   <meta charset="UTF-8">
   <title>Imagem com Botões Fantasma Separados</title>
   <style>
