--- a/public/painel.html
+++ b/public/painel.html
@@ -2,6 +2,12 @@
 <html lang="pt-BR">
 <head>
   <link rel="icon" href="https://i.imgur.com/Y1SCc8D.png" type="image/png">
+  <meta property="og:title" content="Painel de Presentes">
+  <meta property="og:description" content="Acompanhe os presentes de Jhucy e Gabriel.">
+  <meta property="og:image" content="https://i.imgur.com/Y1SCc8D.png">
+  <meta property="og:url" content="https://casamento-0byc.onrender.com">
+  <meta property="og:type" content="website">
+
   <meta charset="UTF-8">
   <title>Painel de Presentes</title>
   <style>
