--- a/public/painel.html
+++ b/public/painel.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <link rel="icon" href="https://i.imgur.com/Y1SCc8D.png" type="image/png">
+  <link rel="icon" href="https://i.imgur.com/IOAPRaX.png" type="image/png">
   <meta property="og:title" content="Painel de Presentes">
   <meta property="og:description" content="Acompanhe os presentes de Jhucy e Gabriel.">
-  <meta property="og:image" content="https://i.imgur.com/Y1SCc8D.png">
+  <meta property="og:image" content="https://i.imgur.com/IOAPRaX.png">
   <meta property="og:url" content="https://casamento-0byc.onrender.com">
   <meta property="og:type" content="website">
 
