--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,14 @@
 <html lang="pt-BR">
 <head>
   <link rel="icon" href="https://i.imgur.com/wWL3UmJ.png" type="image/png">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta property="og:title" content="Convite de Casamento — Jhucy & Gabriel">
   <meta property="og:description" content="Venha celebrar esse momento especial conosco.">
   <meta property="og:image" content="https://i.imgur.com/wWL3UmJ.png">
   <meta property="og:url" content="https://casamento-0byc.onrender.com">
   <meta property="og:type" content="website">
   <meta charset="UTF-8">
-  <title>Imagem com Botões Fantasma Separados</title>
+  <title>Casamento Jhucy & Gabriel</title>
   <style>
     html, body {
       margin: 0;
